<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wudaokou.easylearn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.wudaokou.easylearn.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_train"
        android:name="com.wudaokou.easylearn.ui.train.TrainFragment"
        android:label="@string/title_train"
        tools:layout="@layout/fragment_train" />

    <fragment
    android:id="@+id/navigation_user"
    android:name="com.wudaokou.easylearn.ui.user.UserFragment"
    android:label="@string/title_user"
    tools:layout="@layout/fragment_user" />

</navigation>